Todas las rutas del backend cambiadas para que se ajuste a lo especificado en el yaml
Se han modificado todas las rutas de la parte del backend, actualizado los yaml y ajustado el proyecto a todos los cambios realizados
